# sandbox

./: .gitignore  pyproject.toml  scratch.jl  scratch.py
activity_classification/: activity_algo_dev.ipynb  activity_algo_performance.py  activity_features.ipynb  build_activity_dataset.py  build_activity_model.py
exp/: scratch.ipynb  tmp.ipynb
hpy2_convert/: 0B09C3CF-C70D-46C4-BE89-E0BD26481621-HH_010f-20220721_082821.HPY2  fb_reader  run_converter.py
ppg_on_off/: build_dataset.py  demo_classification_ppg_on_off.py  ppg_on_off_demo.py
stress/: get_params.py
tools/: ts_finder.py
